estimate home page assets by security quotes